# filter-lists

./: .gitignore  citizenlab.py  convert.py  indiewiki.py  pyproject.toml
.github/workflows/: generate-list.yml
