[project]
name = "filter-lists"
version = "0.1.0"
description = "Generates filter lists from various sources for AdGuard Home."
readme = "README.txt"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3",
]

[dependency-groups]
dev = [
    "ipython>=9.9.0",
    "pyrefly>=0.47.0",
    "ruff>=0.14.10",
    "ty>=0.0.9",
]
